--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ debug = true
 [dependencies]
 bitvec = "1.0"
 num-traits = "0.2"
-# rayon = "1.5"
+rayon = "1.5"
 libm = "0.2"
 rand = "0.8"
 priority-queue = "1.2"
