--- a/cakes/Cargo.toml
+++ b/cakes/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clam = { path = "../clam" }
+rayon = "1.5"
