--- a/clam/Cargo.toml
+++ b/clam/Cargo.toml
@@ -1,21 +1,26 @@
 [package]
 name = "clam"
-version = "0.1.0"
+version = "0.9.0"
+authors = [
+    "Najib Ishaq <najib_ishaq@zoho.com>",
+    "Tom Howard <info@tomhoward.codes>",
+    "Noah Daniels <noah_daniels@uri.edu>",
+]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-traits = "0.2"
-libm = "0.2"
-rand = "0.8"
-rayon = "1.5"
-rand_chacha = "0.3"
-bitvec = "1.0"
+num-traits = "~0.2.15"
+libm = "~0.2.6"
+rand = "~0.8.5"
+rayon = "~1.5"
+rand_chacha = "~0.3.1"
+bitvec = "~1.0"
 
 [dependencies.serde]
-version = "1.0"
+version = "~1.0"
 features = ["derive"]
 
 [dev-dependencies]
-float-cmp = "0.9"
+float-cmp = "~0.9.0"
