--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,23 +24,23 @@ jobs:
           --env GIT_COMMITTER_EMAIL="info@uri-abd.org" 
           release /bin/bash -c "cargo install semantic-rs && semantic-rs"
 
-  # pypi:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Python
-  #       uses: actions/setup-python@v1
-  #       with:
-  #         python-version: 3.9
-  #     - name: Dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip setuptools wheel
-  #         pip install twine toml
-  #         pip install .
-  #     - name: Publish
-  #       env:
-  #         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-  #         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-  #       run: |
-  #         python setup.py sdist bdist_wheel
-  #         twine upload dist/*
+  pypi:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: Dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install twine toml
+          pip install .
+      - name: Publish
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
