--- a/clam/Cargo.toml
+++ b/clam/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2021"
 num-traits = "~0.2.15"
 libm = "~0.2.6"
 rand = "~0.8.5"
-rayon = "~1.5"
+rayon = "1.6.0"
 rand_chacha = "~0.3.1"
 bitvec = "~1.0"
 
@@ -24,3 +24,16 @@ features = ["derive"]
 
 [dev-dependencies]
 float-cmp = "~0.9.0"
+ndarray-npy = "0.8"
+
+[dev-dependencies.criterion]
+version = "0.4.0"
+features = ["html_reports"]
+
+[dev-dependencies.ndarray]
+version = "0.15"
+features = ["rayon"]
+
+[[bench]]
+name = "partition"
+harness = false
