dependencies and fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,10 @@
 name = "clam"
 version = "0.8.0"
 authors = [
-    "Najib Ishaq <nishaq@zoho.com>",
+    "Najib Ishaq <najib_ishaq@zoho.com>",
     "Tom Howard <info@tomhoward.codes>",
     "Noah Daniels <noah_daniels@uri.edu>",
+    "Morgan Prior <morgan_prior@uri.edu>",
     "Isaac Chen <ijchen@uri.edu>",
 ]
 edition = "2021"
@@ -25,20 +26,20 @@ debug = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitvec = "1.0"
-num-traits = "0.2"
-# rayon = "1.5"
-libm = "0.2"
+bitvec = "1.0.1"
+num-traits ="0.2.15"
+rayon = "1.6.1"
+libm = "0.2.6"
 rand = "0.8"
 smartcore = "0.2.1"
 # TODO This commit fixes an important bug but is not yet updated on crates.io
 # Replace once this commit is part of the stable release on crates
 automl = { git = "https://github.com/cmccomb/rust-automl", rev = "5ed332d" }
-ndarray = "0.15.4"
+ndarray = "0.15.6"
 ndarray-npy = "0.8.1"
-priority-queue = "1.2"
+priority-queue = "1.3.1"
 rand_chacha = "0.3"
-log = "0.4"
+log ="0.4.17"
 # easy-cast = "0.4.4"
 # eval-metrics = "1.0.1"
 # ordered-float = "3.0"
@@ -52,10 +53,9 @@ features = ["derive"]
 
 [dev-dependencies]
 float-cmp = "0.9"
-ndarray-npy = "0.8"
-log = "0.4"
+ndarray-npy = "0.8.1"
 env_logger = "0.9"
-rmp-serde = "1.1"
+rmp-serde = "1.1.1"
 itertools = "0.10.5"
 
 [dev-dependencies.criterion]
@@ -63,15 +63,15 @@ version = "0.3"
 features = ["html_reports"]
 
 [dev-dependencies.ndarray]
-version = "0.15"
+version = "0.15.6"
 # features = ["rayon"]
 
 [dev-dependencies.hdf5]
-version = "0.8"
+version = "0.8.1"
 features = ["lzf", "blosc"]
 
 [dev-dependencies.serde_json]
-version = "1.0"
+version = "1.0.92"
 features = ["alloc"]
 
 [[example]]
