--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,9 @@ priority-queue = "1.3.1"
 rayon = "1.7.0"
 smartcore = "0.2.1"
 automl = "0.2.7"
+arrow2 = { version = "0.17.2", features = ["io_ipc"]}
+arrow-format = "0.8.1"
+planus = "0.3.1"
 
 [dev-dependencies]
 float-cmp = "0.9.0"
@@ -55,7 +58,6 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = { version = "1.0.96", features = ["alloc"] }
 ndarray = { version = "0.15.6", features = ["rayon"] }
-arrow = { version = "41.0.0", features = ["ipc"] }
 
 [[example]]
 name = "reports"
